--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "node-fetch": "^1.7.3",
-    "node-notifier": "^5.1.2"
+    "node-notifier": "^5.1.2",
+    "table": "^4.0.3"
   }
 }
